--- a/CMS/CMS.Web/Views/Country/UpdateCountry.cshtml
+++ b/CMS/CMS.Web/Views/Country/UpdateCountry.cshtml
@@ -3,10 +3,10 @@
 <h1>Edit country</h1>
 
 <form asp-action="UpdateCountry">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <div class="form-group"><input type="hidden" asp-for="Id" /></div>
+@*     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+ *@    <div class="form-group"><input type="hidden" asp-for="Id" /></div>
     <div class="form-group">
-        <label asp-for="Name" class="control-label"></label>
+        <label asp-for="Name" class="control-label"><span class="text-danger">*</span> Name</label>
         <input style="width: 30%;" asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
