--- a/CMS/CMS.Web/Views/Interviews/Index.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Index.cshtml
@@ -16,6 +16,26 @@
     }
 </style>
 
+
+
+@using (Html.BeginForm("Index", "Interviews", FormMethod.Get))
+{
+    <div class="form-group" style="margin-bottom: 23px;">
+        <div class="row">
+            <div class="col-md-3">
+                @Html.Label("Filter by Status:")
+                @Html.DropDownList("statusFilter", ViewBag.StatusList as SelectList, "All Statuses", new { @class = "form-control" })
+            </div>
+         
+            <div class="col-md-3" style="margin-top: 27px;">
+                <label>&nbsp;</label>
+                <button type="submit" class="btn btn-primary btn-block">Filter</button>
+            </div>
+        </div>
+    </div>
+}
+
+
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
@@ -89,7 +109,8 @@
                                         <a class="bx bx-detail" style="font-size:x-large" asp-action="Details" asp-route-id="@item.InterviewsId" asp-route-previousAction="Index"></a>
                                         @if ((item.InterviewerRole == "Interviewer" || item.InterviewerRole == "General Manager" || item.InterviewerRole == "Solution Architecture") && item.StatusName == StatusCode.GetName("PND"))
                                         {
-                                            <a class="bx bxs-edit-alt" style="font-size:x-large" asp-action="Edit" asp-route-id="@item.InterviewsId" asp-route-idd="@item.StatusId"></a>
+                                            <input type="hidden" name="StatusId" value="@item.StatusId" />
+                                            <a class="bx bxs-edit-alt" style="font-size:x-large" asp-action="Edit" asp-route-id="@item.InterviewsId"></a>
                                             <a class="ri-delete-bin-2-line text-danger" style="font-size:x-large" asp-action="Delete" asp-route-id="@item.InterviewsId"></a>
                                         }
 
