--- a/CMS/CMS.Web/Views/SearchInterviews/Index.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Index.cshtml
@@ -59,9 +59,9 @@
             </div>
 
 
-            <div class="col-md-3" style="margin-left: 83%;margin-top: -38px;">
+            <div class="col-md-3" style="margin-left: 75%;margin-top: -38px;">
                 <label>&nbsp;</label>
-                <a asp-action="ExportFilteredData"
+                <a style="margin-left: 80px;" asp-action="ExportFilteredData"
                    asp-route-positionFilter="@ViewBag.positionFilter"
                    asp-route-scoreFilter="@ViewBag.scoreFilter"
                    asp-route-statusFilter="@ViewBag.statusFilter"
