--- a/CMS/CMS.Web/Views/Interviews/ShowHistory.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/ShowHistory.cshtml
@@ -37,9 +37,9 @@
                                 }
                                 <td>@item.Score</td>
                                 <td>@item.ActualExperience</td>
-                                <td>@item.Notes</td>
-                              
-                                    @if (item.AttachmentId != null)
+                                <td style="max-width: 200px; white-space: pre-line;">@item.Notes</td>
+
+                                @if (item.AttachmentId != null)
                                     {
                                         <td><a asp-controller="Attachments" asp-action="Download" asp-route-id="@item.AttachmentId">Download evaluation</a></td>
                                     }
