--- a/CMS/CMS.Web/Views/Shared/_Layout.cshtml
+++ b/CMS/CMS.Web/Views/Shared/_Layout.cshtml
@@ -389,7 +389,12 @@
                                 @* <a class="dropdown-item" href="apps-chat.html"><i class="mdi mdi-message-text-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Messages</span></a> *@
                                 <div class="dropdown-divider"></div>
                                 @* <a class="dropdown-item" href="pages-profile-settings.html"><i class="mdi mdi-cog-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Settings</span></a> *@
+                                <a class="dropdown-item" asp-controller="Account" asp-action="ChangePassword">
+                                    <i class="mdi mdi-lock-reset text-muted fs-16 align-middle me-1"></i>
+                                    <span class="align-middle" data-key="t-change-password">Change Password</span>
+                                </a>
                                 <a class="dropdown-item" asp-controller="Account" asp-action="Logout"><i class="mdi mdi-logout text-muted fs-16 align-middle me-1"></i> <span class="align-middle" data-key="t-logout">Logout</span></a>
+
                             </div>
                         </div>
                     </div>
