--- a/CMS/CMS.Web/Views/Position/GetPositions.cshtml
+++ b/CMS/CMS.Web/Views/Position/GetPositions.cshtml
@@ -22,7 +22,7 @@
                     <thead>
                         <tr>
                             
-                            <th>position Name</th>
+                            <th>Position Name</th>
                             <th>Evalution Form</th>
                           
                             <th>Actions</th>
