--- a/CMS/CMS.Web/Views/Shared/_Layout.cshtml
+++ b/CMS/CMS.Web/Views/Shared/_Layout.cshtml
@@ -366,7 +366,7 @@
                                     }
                                     else if (User.IsInRole("Interviewer"))
                                     {
-                                        <img class="rounded-circle header-profile-user" src="~/theme/images/users/avatar-3.jpg" alt="Header Avatar">
+                                        <img class="rounded-circle header-profile-user" src="~/theme/images/users/interviewers.jpeg" alt="Header Avatar">
                                     }
                                     else if (User.IsInRole("General Manager"))
                                     {
