--- a/CMS/CMS.Web/Views/Candidates/Index.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Index.cshtml
@@ -22,7 +22,7 @@
     <div class="form-group" style="margin-bottom: 23px;">
         <div class="row">
             <div class="col-md-3">
-                @Html.Label("Filter by Name:")
+                @Html.Label("Filter by Candidate Name:")
                 @Html.TextBox("FullName", null, new { @class = "form-control" })
             </div>
             <div class="col-md-3">
