--- a/CMS/CMS.Web/Views/Interviews/UpdateAfterInterviewForEdit.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/UpdateAfterInterviewForEdit.cshtml
@@ -80,11 +80,21 @@
 
         <div class="form-group" style="margin-top: 15px;">
             <label for="file"><span class="text-danger">*</span> Upload An evaluation:</label>
-            <input type="file" id="file" name="file" class="form-control-file" onchange="validateFileFormat(this)" />
+            <input style="width:30%;" type="file" id="file" name="file" class="form-control" onchange="validateFileFormat(this)" value="@Model.FileName" />
+
+            @if (Model.AttachmentId != null)
+            {
+                <div class="mt-2">
+                    <strong>Previously uploaded file:</strong>
+                    <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.AttachmentId">Download File</a>
+                </div>
+            }
+
             <br>
             <span asp-validation-for="AttachmentId" class="text-danger"></span>
             <span id="fileError" class="text-danger"></span>
         </div>
+     
     }
 
     <p>
@@ -154,3 +164,4 @@
         // Add file format validation logic here if needed
     }
 </script>
+
